feat: Implement markdown convert function to save articles in markdown

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -337,13 +337,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "623bf389",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_one_article_to_md(article: dict, out_dir: str = \"data/md\") -> Path:\n",
-    "    article = fetch_full_article_if_needed(article)\n",
+    "def convert_article_to_md(article: dict, out_dir: str = \"data/md\") -> Path:\n",
+    "    # article = fetch_full_article_if_needed(article)\n",
     "\n",
     "    article_id = article.get(\"id\")\n",
     "    title = article.get(\"title\") or f\"article-{article_id}\"\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2c2d8b06",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "bcca0228",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
     "        test2 = article\n",
     "        print(f\"Article ID {article['id']} contains code block.\")\n",
     "\n",
-    "md_file = convert_one_article_to_md(test2, out_dir=\"data/md_test\")\n",
+    "md_file = convert_article_to_md(test2, out_dir=\"data/md_test\")\n",
     "print(f\"Saved markdown to: {md_file}\")"
    ]
   }
